[package]
name = "nats-io-jwt"
description = "Generate JWTs signed using NKEYs for use with https://nats.io"
version = "0.1.0"
edition = "2021"
exclude = [".gitlab-ci.yml"]
authors = ["Ryan Sanche <ryan@rj45.ca>", "Steve Graham <stgraham2000@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Seraph-Security/nats-jwt"

[dependencies]
data-encoding = "2.6.0"
nkeys = "0.4.4"
regress = "0.10.1"
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.3"

[features]
